# qMasterPassword

./: .clang-format  .cmake-format.py  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  HISTORY  Makefile  README  README.md  command_line.cpp  command_line.h  config.h  do-tag  exception.cpp  exception.h  global.cpp  global.h  logging.cpp  logging.h  main.cpp  main_class.cpp  main_class.h  qMasterPassword.pro  version.h
.github/workflows/: build-flatpak.yml  build-linux.yml  build-windows.yml  build.yml  pre-commit.yml
data/: qMasterPassword.appdata.xml  qMasterPassword.desktop
data/flatpak/: io.github.bkueng.qMasterPassword.yml
data/translations/: .gitignore  CMakeLists.txt  translation_de.ts  translation_pl.ts
data/windows/: .gitignore  installer.nsi  qMasterPassword.exe.manifest
git_hooks/: install.sh  pre-commit
include/: CMakeLists.txt  add_user.h  app_settings.h  command_line.h  config.h  crypto.h  crypto_functions.h  edit_site_widget.h  exception.h  global.h  identicon.h  import_export.h  keypress.h  logging.h  main_class.h  main_window.h  password_generator_widget.h  pushbutton_delegate.h  settings_widget.h  shortcuts_widget.h  ui_helpers.h  uitemplate_helpers.h  user.h  user_widget.h  version.h
scripts/: generate_appimage.sh  show_hide.py
src/: CMakeLists.txt  add_user.cpp  command_line.cpp  crypto.cpp  edit_site_widget.cpp  exception.cpp  global.cpp  identicon.cpp  import_export.cpp  keypress.cpp  keypress_linux.cpp  keypress_windows.cpp  logging.cpp  main.cpp  main_class.cpp  main_window.cpp  password_generator_widget.cpp  pushbutton_delegate.cpp  settings_widget.cpp  shortcuts_widget.cpp  user.cpp  user_widget.cpp
test/: CMakeLists.txt  test.cpp  test.h  tests.xml
ui/: CMakeLists.txt  add_user.ui  edit_site_widget.ui  main_window.ui  password_generator_widget.ui  resources.qrc  settings_widget.ui  shortcuts_widget.ui  user_widget.ui
